# BankSystem-OOP

./: .editorconfig  .gitignore  BankSystem.slnx  CHECKLIST.md  CMakeLists.txt  CONTRIBUTING.md  Clients.txt  Convert to OOP Projects.cpp  Convert to OOP Projects.slnx  Convert to OOP Projects.vcxproj  Convert to OOP Projects.vcxproj.filters  FirstLib.h  Global.h  LICENSE  LoginRegister.txt  README.md  The Old Project.cpp  Users.txt  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsClientListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindUserScreen.h  clsInputValidate.h  clsInputValidate.h.txt  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsPerson.h  clsScreen.h  clsString.h  clsTotalBalanceScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  (+7 more)
data/: TransferLog.txt
include/: clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsClientListScreen.h  clsCurrenciesListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrencyScreen.h  clsFindUserScreen.h  clsInputValidate.h  clsListUsersScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsPerson.h  clsScreen.h  clsString.h  clsTotalBalanceScreen.h  clsTransactionsScreen.h  clsTransfareScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUser.h  (+5 more)
(+2 files in other folders)
